--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
-	<meta name="keywords" content="">
-	<meta name="author" content="Awaiken Theme">
+	<meta name="description" content="I am a versatile Full Stack Developer with expertise in Angular, Spring Boot, and Node.js, complemented by a strong foundation in data science and a keen interest in DevOps practices. I excel in designing and developing high-performance web applications that are both interactive and user-centric, driving engagement and delivering measurable results. With a passion for innovation and problem-solving, I continuously refine my skills and adopt emerging technologies to deliver scalable and efficient solutions. My dedication to excellence and collaborative mindset make me a valuable asset in crafting modern, impactful digital experiences.">
+	<meta name="keywords" content="oussema mansouri, Full Stack Developer, Angular, Spring Boot, Node.js, data science, IA, DevOps">
+	<meta name="author" content="oussema mansouri">
 	<!-- Page Title -->
-	<title>Oussema Mansouri Portfolio</title>
+	<title>Oussema Mansouri</title>
 	<!-- Google Fonts css-->
 	<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash%7CRoboto:300,400,400i,500,500i,700,700i,900"
 		rel="stylesheet">
@@ -85,17 +85,17 @@
 							<span class="before-heading">Hi There! I'm </span>
 							<span class="cd-words-wrapper">
 								<b class="is-visible">Full Stack Developer</b>
-								<b>Freelancer</b>
-
+								<b>Data Scientist</b>
+								<b>DevOps Enthusiast</b>
 							</span>
 						</h2>
-						<p>I do professional websites , redesign and continuously support customer-facing problems and
-							enterprise web apps to achieve high conversion and adoption rates </p>
+						<p>I build and optimize web applications with Angular, Spring Boot, and Node.js, leverage data 
+							insights for smarter decisions, and streamline deployment as a DevOps enthusiast </p>
 
 
 					</div>
 					<a href="images/OUSSAMA MANSOURI CV 2024.pdf" target="_blank" class="btn-download">View CV</a>
-					<!--  <bottun  class="btn-download" data-bs-toggle="modal" data-bs-target="#exampleModal" style="cursor: pointer;"  >View CV </bottun> -->
+					<!-- <a  class="btn-download" data-bs-toggle="modal" data-bs-target="#exampleModal" style="cursor: pointer;"  >View CV </a> -->
 
 					<!-- Modal -->
 					<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -151,22 +151,26 @@
 					<!-- About Content start -->
 					<div class="about-content wow fadeInUp" data-wow-delay="0.8s">
 						<h3>I'm Oussama Mansouri</h3>
-						<p>Since the beginning of my journey as a freelance developer nearly 3 years ago, I've done
-							remote work for agencies, and collaborated with talented people to create digital products
-							for both personal and commercial use.</p>
+						<p>I am a versatile Full Stack Developer with expertise in Angular, Spring Boot,
+							 and Node.js, complemented by a strong foundation in data science and a keen
+							  interest in DevOps practices. 
+								 </p>
 
-						<p>I love interactive design, developing and building web applications.</p>
+						<p>I excel in designing and developing high-performance
+							web applications that are both interactive and user-centric, driving engagement
+							 and delivering measurable results. With a passion for innovation and problem-solving.</p>
 
-						<p> I am quietly confident, naturally curious, and perpetually working on improving my design
-							problem, one at a time.</p>
+						<p> I continuously refine my skills and adopt emerging technologies to deliver scalable
+							and efficient solutions. My dedication to excellence and collaborative mindset make
+							 me a valuable asset in crafting modern, impactful digital experiences.</p>
 
 						<ul>
-							<li><i class="flaticon-flag"></i><b>Nationality:</b> tunisian</li>
+							<li><i class="flaticon-flag"></i><b>Nationality:</b> Tunisian</li>
 							<li><i class="flaticon-freelance"></i><b>Freelance:</b> Available</li>
-							<li><i class="flaticon-phone-call"></i><b>Phone:</b> +216 98650478</li>
+							<li><i class="flaticon-phone-call"></i><b>Phone:</b> +216 98 650 478</li>
 							<li><i class="flaticon-placeholder"></i><b>Address:</b>Ariana,Tunis</li>
 							<li><i class="flaticon-email"></i><b>Email:</b> oussemamansouri619@gmail.com</li>
-							<li><i class="flaticon-translation"></i><b>Spoken Langages:</b> French - arabic - english
+							<li><i class="flaticon-translation"></i><b>Spoken Langages:</b> French - Arabic - English
 							</li>
 							<li><i class="bi bi-linkedin"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
 										fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
@@ -218,7 +222,7 @@
 							<i class="flaticon-translation"></i>
 						</div>
 
-						<h3>Web development</h3>
+						<h3>App development</h3>
 
 					</div>
 					<!-- Service Single End -->
