--- a/index.html
+++ b/index.html
@@ -729,9 +729,9 @@
 					<div class="filter-container portfolio-nav">
 						<ul class="list-inline filter">
 							<li><a href="#" class="active-portfolio" data-filter="*">All </a></li>
-							<li><a href="#" data-filter=".Dynamic">Dynamic Website</a></li>
-							<li><a href="#" data-filter=".Static">Static Website</a></li>
-							<li><a href="#" data-filter=".Others">Others</a></li>
+							<li><a href="#" data-filter=".FullStackDev">Full Stack Dev</a></li>
+							<li><a href="#" data-filter=".DataScience">Data Science & IA</a></li>
+							<li><a href="#" data-filter=".DevOps">DevOps</a></li>
 						</ul>
 					</div>
 					<!-- Portfolio Filter list End -->
@@ -741,7 +741,7 @@
 			<div class="row portfolio-boxes">
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box Others">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
 					<div class="single-portfolio">
 						<a href="#popup-1" class="has-popup">
 							<img src="images/static-res-pages-project.jpg" class="Portfolio Image" alt="" />
@@ -775,7 +775,7 @@
 
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box Dynamic">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
 					<div class="single-portfolio">
 						<a href="#popup-8" class="has-popup">
 							<img src="images/Mandra3.jpg" class="Portfolio Image" alt="" />
@@ -809,7 +809,7 @@
 				<!-- Single Portfolio Ends -->
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box Static">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
 					<div class="single-portfolio">
 						<a href="#popup-8" class="has-popup">
 							<img src="images/home page.jpg" class="Portfolio Image" alt="" />
@@ -843,7 +843,7 @@
 				<!-- Single Portfolio Ends -->
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box Dynamic">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
 					<div class="single-portfolio">
 						<a href="#popup-2" class="has-popup">
 							<img src="images/accueil.jpg" class="Portfolio Image" alt="" />
@@ -886,7 +886,7 @@
 
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box Dynamic">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
 					<div class="single-portfolio">
 						<a href="#popup-5" class="has-popup">
 							<img src="images/e-commerce.jpg" class="Portfolio Image" alt="" />
@@ -922,7 +922,7 @@
 				<!-- Single Portfolio Ends -->
 
 				<!-- Single Portfolio starts -->
-				<!-- <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box Others">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DevOps">
 					<div class="single-portfolio">
 						<a href="#popup-4" class="has-popup">
 							<img src="images/P2.jpg" class="Portfolio Image" alt="" />
@@ -947,11 +947,11 @@
 							</div>
 						</div>
 					</div>
-				</div> -->
+				</div>
 				<!-- Single Portfolio Ends -->
 
 				<!-- Single Portfolio starts -->
-				<!-- <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box Others">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataScience">
 					<div class="single-portfolio">
 						<a href="#popup-6" class="has-popup">
 							<img src="images/P3.jpg" class="Portfolio Image" alt="" />
@@ -976,11 +976,11 @@
 							</div>
 						</div>
 					</div>
-				</div> -->
+				</div>
 				<!-- Single Portfolio Ends -->
 
 				<!-- Single Portfolio starts -->
-				<!-- <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box Others">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DevOps">
 					<div class="single-portfolio">
 						<a href="#popup-13" class="has-popup">
 							<img src="images/gestion des stagiars.jpg" class="Portfolio Image" alt="" />
@@ -1004,12 +1004,12 @@
 							</div>
 						</div>
 					</div>
-				</div> -->
+				</div>
 				<!-- Single Portfolio Ends -->
 
 
 				<!-- Single Portfolio starts -->
-				<!-- <div class="col-md-3 col-sm-6 col-xs-12 portfolio-box Others">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DevOps">
 					<div class="single-portfolio">
 						<a href="#popup-14" class="has-popup">
 							<img src="images/P1.jpg" class="Portfolio Image" alt="" />
@@ -1033,11 +1033,11 @@
 							</div>
 						</div>
 					</div>
-				</div> -->
+				</div>
 				<!-- Single Portfolio Ends -->
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box Dynamic">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
 					<div class="single-portfolio">
 						<a href="#popup-9" class="has-popup">
 							<img src="images/web1.jpg" class="Portfolio Image" alt="" />
@@ -1071,7 +1071,7 @@
 				<!-- Single Portfolio Ends -->
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box Dynamic">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
 					<div class="single-portfolio">
 						<a href="#popup-12" class="has-popup">
 							<img src="images/The Bridge.jpg" class="Portfolio Image" alt="" />
@@ -1102,7 +1102,7 @@
 				<!-- Single Portfolio Ends -->
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box Static">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
 					<div class="single-portfolio">
 						<a href="#popup-3" class="has-popup">
 							<img src="images/Portfolio.jpg" class="Portfolio Image" alt="" />
@@ -1133,7 +1133,7 @@
 				<!-- Single Portfolio Ends -->
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box Static">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
 					<div class="single-portfolio">
 						<a href="#popup-7" class="has-popup">
 							<img src="images/homrani.jpg" class="Portfolio Image" alt="" />
