--- a/index.html
+++ b/index.html
@@ -911,28 +911,28 @@
 				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataScience">
 					<div class="single-portfolio">
 						<a href="#popup-6" class="has-popup">
-							<img src="images/P3.jpg" class="Portfolio Image" alt="" />
+							<img src="images/Plant-Disease-Detection-AI-System.png" class="Portfolio Image" alt="" />
 							<div class="single-portfolio-overlay">
-								<h2>Visual Memory Game</h2>
-								<h3>Desktop Application</h3>
+								<h2>Plant Disease Detection</h2>
+								<h3>AI System</h3>
 							</div>
 						</a>
 					</div>
 					<div id="popup-6" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
 							<div class="image">
-								<img src="images/P3.jpg" alt="">
+								<img src="images/Plant-Disease-Detection-AI-System.png" alt="">
 							</div>
 							<div class="desc">
-								<h4>Visual Memory Game</h4>
-								<h5><i class="fa fa-folder"></i> Desktop Application</h5>
+								<h4>Plant Disease Detection</h4>
+								<h5><i class="fa fa-folder"></i> AI System </h5>
 								<p>
-									My latest project consists of developing a fully functional visual memory game. upon
-									completion, the player will be asked to memorize and match animal pictures to their
-									respective counter part on a different column.
+									This project aims to develop an AI system for early and accurate detection
+									of plant diseases using machine learning and computer vision techniques.
+									The system will help farmers and agriculturists identify diseases in plants
+									at an early stage, enabling timely intervention and better crop health management.
 								</p>
-								<a href="https://github.com/oussemamansouri/Visual-Memory-Game.git"
-									class="btn-view-project">View Project</a>
+								<span class="btn-view-project">Private Project</span>
 							</div>
 						</div>
 					</div>
@@ -940,32 +940,31 @@
 				<!-- Single Portfolio Ends -->
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DevOps">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataScience">
 					<div class="single-portfolio">
 						<a href="#popup-13" class="has-popup">
-							<img src="images/gestion des stagiars.jpg" class="Portfolio Image" alt="" />
+							<img src="images/language_distribution_bar_chart.png" class="Portfolio Image" alt="" />
 							<div class="single-portfolio-overlay">
-								<h2>Stagiary management</h2>
-								<h3>Desktop Application</h3>
+								<h2> GitHub Repository Language </h2>
+								<h3>Distribution Analyzer</h3>
 							</div>
 						</a>
 					</div>
 					<div id="popup-13" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
 							<div class="image">
-								<img src="images/gestion des stagiars.jpg" alt="">
+								<img src="images/language_distribution_bar_chart.png" alt="">
 							</div>
 							<div class="desc">
-								<h4>Stagiary management</h4>
-								<h5><i class="fa fa-folder"></i> Desktop Application</h5>
+								<h4>GitHub Repository Language</h4>
+								<h5><i class="fa fa-folder"></i> Distribution Analyzer</h5>
 								<p>
-									I created a desktop application named "Stagiary Management" using Java. This
-									application efficiently manages and tracks the progress of interns within an
-									organization, allowing for seamless onboarding and task assignment. With its
-									intuitive user interface and robust functionality, Stagiary Management simplifies
-									the process of managing and monitoring interns, enhancing overall productivity and
-									coordination. </p>
-								<a href="https://github.com/oussemamansouri/Stagiary-Management.git"
+									This project analyzes popular GitHub repositories to count the number
+									of repositories by programming language. Using the GitHub REST API, 
+									it fetches data on repositories with at least one star, processes the results,
+									 and generates a visual representation of the language distribution.
+									  The findings are saved in a markdown file along with a bar chart </p>
+								<a href="https://github.com/oussemamansouri/GitHub-Repository-Language-Distribution-Analyzer"
 									class="btn-view-project">View Project</a>
 							</div>
 						</div>
