--- a/index.html
+++ b/index.html
@@ -879,27 +879,61 @@
 				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DevOps">
 					<div class="single-portfolio">
 						<a href="#popup-4" class="has-popup">
-							<img src="images/P2.jpg" class="Portfolio Image" alt="" />
+							<img src="images/BackEnd_Tp_Achat.jpg" class="Portfolio Image" alt="" />
 							<div class="single-portfolio-overlay">
-								<h2>Currency Converter</h2>
-								<h3>Desktop Application</h3>
+								<h2>BackEnd TP Achat</h2>
+								<h3>DevOps</h3>
 							</div>
 						</a>
 					</div>
 					<div id="popup-4" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
 							<div class="image">
-								<img src="images/P2.jpg" alt="">
+								<img src="images/BackEnd_Tp_Achat.jpg" alt="">
 							</div>
 							<div class="desc">
-								<h4>Currency Converter</h4>
-								<h5><i class="fa fa-folder"></i> Desktop Application</h5>
+								<h4> BackEnd TP Achat </h4>
+								<h5><i class="fa fa-folder"></i> DevOps </h5>
 								<p>
-									In complience to my app developing streak, i have also built a Currency Converter
-									that operates Euro, Dollar, and Tunisian Dinnar. it is amongst my very first
-									attempts at a multi-layered projects.
+									This project, TP Achat, is a Spring Boot application designed as a learning
+									 resource for practicing DevOps principles. It provides a simple e-commerce
+									  platform for managing product purchases and orders, serving as a foundation
+									   to integrate various DevOps tools and workflows.
 								</p>
-								<a href="https://github.com/oussemamansouri/Currency-Converter.git"
+								<a href="https://github.com/oussemamansouri/TP-Achat---Spring-Boot-Project-for-Learning-DevOps"
+									class="btn-view-project">View Project</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Single Portfolio Ends -->
+
+				<!-- Single Portfolio starts -->
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DevOps">
+					<div class="single-portfolio">
+						<a href="#popup-20" class="has-popup">
+							<img src="images/FontEnd_Tp_Achat.jpg" class="Portfolio Image" alt="" />
+							<div class="single-portfolio-overlay">
+								<h2> FrontEnd TP Achat </h2>
+								<h3> DevOps </h3>
+							</div>
+						</a>
+					</div>
+					<div id="popup-20" class="popup-box mfp-fade mfp-hide">
+						<div class="content">
+							<div class="image">
+								<img src="images/FontEnd_Tp_Achat.jpg" alt="">
+							</div>
+							<div class="desc">
+								<h4> FrontEnd TP Achat </h4>
+								<h5><i class="fa fa-folder"></i> DevOps</h5>
+								<p>
+									This project, TP Achat, is a Angular application designed as a learning
+									 resource for practicing DevOps principles. It provides a simple e-commerce
+									  platform for managing product purchases and orders, serving as a foundation
+									   to integrate various DevOps tools and workflows.
+								</p>
+								<a href="https://github.com/oussemamansouri/TP-Achat-Angular-Project-for-Learning-DevOps"
 									class="btn-view-project">View Project</a>
 							</div>
 						</div>
@@ -974,31 +1008,31 @@
 
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DevOps">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataScience">
 					<div class="single-portfolio">
 						<a href="#popup-14" class="has-popup">
-							<img src="images/P1.jpg" class="Portfolio Image" alt="" />
+							<img src="images/language_occurrences_bar_chart.png" class="Portfolio Image" alt="" />
 							<div class="single-portfolio-overlay">
-								<h2>Simple Calculator </h2>
-								<h3>Desktop Application</h3>
+								<h2>Data Extraction & Text Classification</h2>
+								<h3> Data Science </h3>
 							</div>
 						</a>
 					</div>
 					<div id="popup-14" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
 							<div class="image">
-								<img src="images/P1.jpg" alt="">
+								<img src="images/language_occurrences_bar_chart.png" alt="">
 							</div>
 							<div class="desc">
-								<h4>Simple Calculator</h4>
-								<h5><i class="fa fa-folder"></i> Desktop Application</h5>
+								<h4>Data Extraction & Text Classification</h4>
+								<h5><i class="fa fa-folder"></i> Data Science </h5>
 								<p>
-									I created a simple desktop application using Java that serves as a calculator. This
-									application allows users to perform basic mathematical calculations such as
-									addition, subtraction, multiplication, and division. With its clean and
-									user-friendly interface, the calculator provides a convenient tool for quick and
-									accurate computations. </p>
-								<a href="https://github.com/oussemamansouri/Calculator.git"
+									This project is designed to extract, clean, analyze,
+									 and classify information from CVs in PDF format.
+									  It combines text extraction techniques with machine learning
+									   for text classification, offering a complete pipeline from 
+									   raw CVs to actionable insights. </p>
+								<a href="https://github.com/oussemamansouri/CV-Data-Extraction-Analysis-and-Text-Classification"
 									class="btn-view-project">View Project</a>
 							</div>
 						</div>
