--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 
 					</div>
-					<a href="images/OUSSAMA MANSOURI CV 2024.pdf" target="_blank" class="btn-download">View CV</a>
+					<a href="images/oussema mansouri cv DevOps 2024 (1).pdf" target="_blank" class="btn-download">View CV</a>
 					<!-- <a  class="btn-download" data-bs-toggle="modal" data-bs-target="#exampleModal" style="cursor: pointer;"  >View CV </a> -->
 
 					<!-- Modal -->
