--- a/index.html
+++ b/index.html
@@ -96,32 +96,10 @@
 							I'm also a DevOps enthusiast
 							, focused on streamlining development and deployment processes. </p>
 
-
 					</div>
-					<a href="images/oussema mansouri cv DevOps 2024 (1).pdf" target="_blank" class="btn-download">View CV</a>
-					<!-- <a  class="btn-download" data-bs-toggle="modal" data-bs-target="#exampleModal" style="cursor: pointer;"  >View CV </a> -->
-
-					<!-- Modal -->
-					<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-						aria-hidden="true">
-						<div class="modal-dialog">
-							<div class="modal-content">
-								<div class="modal-header">
-									<h5 class="modal-title" id="exampleModalLabel">Report </h5>
-									<button type="button" class="btn-close" data-bs-dismiss="modal"
-										aria-label="Close"></button>
-								</div>
-								<div class="modal-body">
-									the resume is not available at this time
-								</div>
-								<div class="modal-footer">
-									<button type="button" class="btn btn-secondary"
-										data-bs-dismiss="modal">Close</button>
-								</div>
-							</div>
-						</div>
-					</div>
-
+					<a href="images/oussema mansouri cv DevOps 2024 (1).pdf" target="_blank" class="btn-download">View
+						CV</a>
+					<!-- Banner Content End -->
 				</div>
 			</div>
 		</div>
@@ -700,7 +678,7 @@
 						<a href="#popup-1" class="has-popup">
 							<img src="images/static-res-pages-project.jpg" class="Portfolio Image" alt="" />
 							<div class="single-portfolio-overlay">
-								<h2>Responsive Pages</h2>
+								<h2>Responsive Pages </h2>
 								<h3>Convert design to code</h3>
 							</div>
 						</a>
@@ -711,7 +689,7 @@
 								<img src="images/static-res-pages-project.jpg" alt="">
 							</div>
 							<div class="desc">
-								<h4>Responsive Pages</h4>
+								<h4> Responsive Pages </h4>
 								<h5><i class="fa fa-folder"></i>Convert figma design to code</h5>
 								<p>
 									As a freelancer on the "Freelancers" platform, I recently converted a Figma design
@@ -734,7 +712,7 @@
 						<a href="#popup-8" class="has-popup">
 							<img src="images/Mandra3.jpg" class="Portfolio Image" alt="" />
 							<div class="single-portfolio-overlay">
-								<h2>Mandra</h2>
+								<h2>Mandra </h2>
 								<h3>Web Application</h3>
 							</div>
 						</a>
@@ -745,7 +723,7 @@
 								<img src="images/Mandra3.jpg" alt="">
 							</div>
 							<div class="desc">
-								<h4>Mandra</h4>
+								<h4> Mandra </h4>
 								<h5><i class="fa fa-folder"></i>Web Application</h5>
 								<p>
 									The project involves developing a web application dedicated to places to visit in
@@ -779,7 +757,7 @@
 								<img src="images/home page.jpg" alt="">
 							</div>
 							<div class="desc">
-								<h4>Travel template</h4>
+								<h4> Travel template</h4>
 								<h5><i class="fa fa-folder"></i> Template</h5>
 								<p>
 									As a freelancer, I created a travel template using HTML, CSS and JavaScript. This
@@ -813,7 +791,7 @@
 								<img src="images/accueil.jpg" alt="">
 							</div>
 							<div class="desc">
-								<h4>Connected</h4>
+								<h4> Connected</h4>
 								<h5><i class="fa fa-folder"></i> Mediation platform</h5>
 								<p>
 									I created "Connected," a mediation platform using Angular, Node.js, Spring Boot, and
@@ -856,7 +834,7 @@
 								<img src="images/e-commerce.jpg" alt="">
 							</div>
 							<div class="desc">
-								<h4>OUSSEMA-SHOP </h4>
+								<h4> OUSSEMA-SHOP </h4>
 								<h5><i class="fa fa-folder"></i> E-commerce Platform</h5>
 								<p>
 
@@ -896,9 +874,9 @@
 								<h5><i class="fa fa-folder"></i> DevOps </h5>
 								<p>
 									This project, TP Achat, is a Spring Boot application designed as a learning
-									 resource for practicing DevOps principles. It provides a simple e-commerce
-									  platform for managing product purchases and orders, serving as a foundation
-									   to integrate various DevOps tools and workflows.
+									resource for practicing DevOps principles. It provides a simple e-commerce
+									platform for managing product purchases and orders, serving as a foundation
+									to integrate various DevOps tools and workflows.
 								</p>
 								<a href="https://github.com/oussemamansouri/TP-Achat---Spring-Boot-Project-for-Learning-DevOps"
 									class="btn-view-project">View Project</a>
@@ -929,9 +907,9 @@
 								<h5><i class="fa fa-folder"></i> DevOps</h5>
 								<p>
 									This project, TP Achat, is a Angular application designed as a learning
-									 resource for practicing DevOps principles. It provides a simple e-commerce
-									  platform for managing product purchases and orders, serving as a foundation
-									   to integrate various DevOps tools and workflows.
+									resource for practicing DevOps principles. It provides a simple e-commerce
+									platform for managing product purchases and orders, serving as a foundation
+									to integrate various DevOps tools and workflows.
 								</p>
 								<a href="https://github.com/oussemamansouri/TP-Achat-Angular-Project-for-Learning-DevOps"
 									class="btn-view-project">View Project</a>
@@ -994,10 +972,10 @@
 								<h5><i class="fa fa-folder"></i> Distribution Analyzer</h5>
 								<p>
 									This project analyzes popular GitHub repositories to count the number
-									of repositories by programming language. Using the GitHub REST API, 
+									of repositories by programming language. Using the GitHub REST API,
 									it fetches data on repositories with at least one star, processes the results,
-									 and generates a visual representation of the language distribution.
-									  The findings are saved in a markdown file along with a bar chart </p>
+									and generates a visual representation of the language distribution.
+									The findings are saved in a markdown file along with a bar chart </p>
 								<a href="https://github.com/oussemamansouri/GitHub-Repository-Language-Distribution-Analyzer"
 									class="btn-view-project">View Project</a>
 							</div>
@@ -1028,10 +1006,10 @@
 								<h5><i class="fa fa-folder"></i> Data Science </h5>
 								<p>
 									This project is designed to extract, clean, analyze,
-									 and classify information from CVs in PDF format.
-									  It combines text extraction techniques with machine learning
-									   for text classification, offering a complete pipeline from 
-									   raw CVs to actionable insights. </p>
+									and classify information from CVs in PDF format.
+									It combines text extraction techniques with machine learning
+									for text classification, offering a complete pipeline from
+									raw CVs to actionable insights. </p>
 								<a href="https://github.com/oussemamansouri/CV-Data-Extraction-Analysis-and-Text-Classification"
 									class="btn-view-project">View Project</a>
 							</div>
