--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 							, focused on streamlining development and deployment processes. </p>
 
 					</div>
-					<a href="images/oussema mansouri cv DevOps 2024 (1).pdf" target="_blank" class="btn-download">View
+					<a href="#resume" target="_blank" class="btn-download">View
 						CV</a>
 					<!-- Banner Content End -->
 				</div>
