--- a/index.html
+++ b/index.html
@@ -635,9 +635,9 @@
 				</div> -->
 			</div>
 		</div>
-         <!-- ////////////////////////////////////////// -->
+		<!-- ////////////////////////////////////////// -->
 
-		 	<!-- Portfolio Section Starts -->
+		<!-- Portfolio Section Starts -->
 		<div class="container" style="margin-top: 2rem;">
 			<div class="row">
 				<div class="col-md-12">
@@ -671,7 +671,8 @@
 				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
 					<div class="single-portfolio">
 						<a href="#popup-1" class="has-popup">
-							<img src="images/Certificates/Advanced_JavaScript_Certificate.jpg" class="Portfolio Image" alt="" />
+							<img src="images/Certificates/Advanced_JavaScript_Certificate.jpg" class="Portfolio Image"
+								alt="" />
 							<div class="single-portfolio-overlay">
 								<h2>Advanced JavaScript </h2>
 								<h3>Programing Language</h3>
@@ -679,24 +680,15 @@
 						</a>
 					</div>
 					<div id="popup-1" class="popup-box mfp-fade mfp-hide">
-						<img src="./images/Certificates/Advanced_JavaScript_Certificate.jpg" alt="">
-						<!-- <div class="content">
-							<div class="image">
-								<img src="images/Certificates/Advanced_JavaScript_Certificate.jpg" alt="">
+						<div class="content">
+							<img src="images/Certificates/Advanced_JavaScript_Certificate.jpg" alt="Advanced JavaScript Certificate">
+							<div class="btn-layout">
+								<a href="./images/Scrimba Certifications/Advanced JavaScript Certificate For Oussema Mansouri.pdf"
+									target="_blank" class="btn-view-project">View PDF</a>
+								<a href="https://scrimba.com/certificate-cert2ffentAFMUWft1N1wguCBPyFAm3krv8L1qaKUNum9VmYhg"
+									target="_blank" class="btn-view-project">Source</a>
 							</div>
-							<div class="desc">
-								<h4> Advanced JavaScript </h4>
-								<h5><i class="fa fa-folder"></i> Programing Language</h5>
-								<p>
-									As a freelancer on the "Freelancers" platform, I recently converted a Figma design
-									into HTML, CSS, and JS for an Arabic-speaking client. I developed both Arabic and
-									English versions of the two-page site, ensuring cultural sensitivity and technical
-									finesse. The client was delighted with the seamless integration and user experience.
-								</p>
-								<a href="https://github.com/oussemamansouri/static-responsive-page-html-css-JavaScript-for-existing-project/tree/main"
-									target="_blank" class="btn-view-project">Displaying the identifier</a>
-							</div>
-						</div> -->
+						</div>
 					</div>
 				</div>
 				<!-- Single Portfolio Ends -->
@@ -1147,7 +1139,7 @@
 			</div>
 
 		</div>
-	<!-- Portfolio Section Ends -->
+		<!-- Portfolio Section Ends -->
 
 
 
