--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
 							<div class="btn-layout">
 								<a href="./images/SimpliLearn Certifications/DevOps Tools Certificate For Oussema Mansouri.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
-								<a href="https://www.simplilearn.com/skillup-certificate-landing?token=eyJjb3Vyc2VfaWQiOiIxODA3IiwiY2VydGlmaWNhdGVfdXJsIjoiaHR0cHM6XC9cL2NlcnRpZmljYXRlcy5zaW1wbGljZG4ubmV0XC9zaGFyZVwvNzg3NzkyOV84MTA1MjM1MTczODk3MDAyMDkzOS5wbmciLCJ1c2VybmFtZSI6Ik1hbnNvdXJpIE91c3NlbWEifQ%3D%3D&utm_source=shared-certificate&utm_medium=lms&utm_campaign=shared-certificate-promotion&referrer=https%3A%2F%2Flms.simplilearn.com%2Fcourses%2F4305%2FIntroduction-to-Devops-Tools%2Fcertificate%2Fdownload-skillup&%24web_only=true&_branch_match_id=1413477934435644398&_branch_referrer=H4sIAAAAAAAAA8soKSkottLXL87MLcjJ1EssKNDLyczL1k%2FVDzKKKjN0cYz0C0yyrytKTUstKsrMS49PKsovL04tsvUBqkpN8cwDAN%2BYuhpBAAAA"
+								<a href="https://simpli-web.app.link/e/R2Zv1DAYNQb"
 									target="_blank" class="btn-view-project">Source</a>
 							</div>
 						</div>
@@ -787,7 +787,7 @@
 							<div class="btn-layout">
 								<a href="./images/SimpliLearn Certifications/TypeScript Certificate.pdf" target="_blank"
 									class="btn-view-project">View PDF</a>
-								<a href="https://www.simplilearn.com/skillup-certificate-landing?token=eyJjb3Vyc2VfaWQiOiIzMTE5IiwiY2VydGlmaWNhdGVfdXJsIjoiaHR0cHM6XC9cL2NlcnRpZmljYXRlcy5zaW1wbGljZG4ubmV0XC9zaGFyZVwvNzg3NzI2M184MDk5MTQzMTczODk0NzE4NTI4OS5wbmciLCJ1c2VybmFtZSI6Ik1hbnNvdXJpIE91c3NlbWEifQ%3D%3D&utm_source=shared-certificate&utm_medium=lms&utm_campaign=shared-certificate-promotion&referrer=https%3A%2F%2Flms.simplilearn.com%2Fcourses%2F5896%2FTypescript-%3A-The-New-JavaScript-for-Web-Development%2Fcertificate%2Fdownload-skillup&%24web_only=true&_branch_match_id=1413477934435644398&_branch_referrer=H4sIAAAAAAAAA8soKSkottLXL87MLcjJ1EssKNDLyczL1k%2FVDyuwrErPz6%2FwC0yyrytKTUstKsrMS49PKsovL04tsvUBqkpN8cwDAMjNx8JBAAAA"
+								<a href="https://simpli-web.app.link/e/Vp9zgooxNQb"
 									target="_blank" class="btn-view-project">Source</a>
 							</div>
 						</div>
@@ -889,7 +889,7 @@
 							<div class="btn-layout">
 								<a href="./images/Certificates/Data Science Certificate For Oussema Mansouri.jpg"
 									target="_blank" class="btn-view-project">View PDF</a>
-								<a href="https://www.simplilearn.com/skillup-certificate-landing?token=eyJjb3Vyc2VfaWQiOiIxNzM3IiwiY2VydGlmaWNhdGVfdXJsIjoiaHR0cHM6XC9cL2NlcnRpZmljYXRlcy5zaW1wbGljZG4ubmV0XC9zaGFyZVwvNzgwNjAzMV84MDk5MTQzMTczODcxNDcxMDgzMC5wbmciLCJ1c2VybmFtZSI6Ik1hbnNvdXJpIE91c3NlbWEifQ%3D%3D&utm_source=shared-certificate&utm_medium=lms&utm_campaign=shared-certificate-promotion&referrer=https%3A%2F%2Flms.simplilearn.com%2Fcourses%2F4227%2FIntroduction-to-Data-Science%2Fcertificate%2Fdownload-skillup&%24web_only=true&_branch_match_id=1413477934435644398&_branch_referrer=H4sIAAAAAAAAA8soKSkottLXL87MLcjJ1EssKNDLyczL1k%2FVz8%2F3TgkKK8z1DUyyrytKTUstKsrMS49PKsovL04tsvUBqkpN8cwDAErdoA1BAAAA"
+								<a href="https://simpli-web.app.link/e/ooKdRVqmMQb"
 									target="_blank" class="btn-view-project">Source</a>
 							</div>
 						</div>
@@ -902,20 +902,20 @@
 				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataScience">
 					<div class="single-portfolio">
 						<a href="#popup-10" class="has-popup">
-							<img src="images/language_occurrences_bar_chart.png" class="Portfolio Image" alt="" />
+							<img src="images/Certificates/Kubernetes.png" class="Portfolio Image" alt="" />
 							<div class="single-portfolio-overlay">
-								<h2>Data Extraction & Text Classification</h2>
-								<h3> Data Science </h3>
+								<h2>Kubernetes</h2>
+								<h3>Simplilearn </h3>
 							</div>
 						</a>
 					</div>
 					<div id="popup-10" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/Formation_DevOps.jpg" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/Kubernetes.png" alt="Advanced JavaScript Certificate">
 							<div class="btn-layout">
-								<a href="./images/Certificates/Formation_DevOps.jpg" target="_blank"
+								<a href="./images/SimpliLearn Certifications/Kubernetes Certificate For Oussema Mansouri.pdf" target="_blank"
 									class="btn-view-project">View PDF</a>
-								<a href="https://www.linkedin.com/company/yakin-process/" target="_blank"
+								<a href="https://simpli-web.app.link/e/HejUFhpYNQb" target="_blank"
 									class="btn-view-project">Source</a>
 							</div>
 						</div>
@@ -927,20 +927,20 @@
 				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
 					<div class="single-portfolio">
 						<a href="#popup-11" class="has-popup">
-							<img src="images/web1.jpg" class="Portfolio Image" alt="" />
+							<img src="images/Certificates/The_AI_Engineer_Path.png" class="Portfolio Image" alt="" />
 							<div class="single-portfolio-overlay">
-								<h2>Red Cross</h2>
-								<h3>Club website</h3>
+								<h2>The AI Engineer Path</h2>
+								<h3>Scrimba</h3>
 							</div>
 						</a>
 					</div>
 					<div id="popup-11" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/Formation_DevOps.jpg" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/The_AI_Engineer_Path.png" alt="Advanced JavaScript Certificate">
 							<div class="btn-layout">
-								<a href="./images/Certificates/Formation_DevOps.jpg" target="_blank"
+								<a href="./images/Scrimba Certifications/The AI Engineer Path Certificate For Oussema Mansouri.pdf" target="_blank"
 									class="btn-view-project">View PDF</a>
-								<a href="https://www.linkedin.com/company/yakin-process/" target="_blank"
+								<a href="https://scrimba.com/certificate-cert2JbLs3qgAvqtswYAtfEM9ksEtEnKes7NB5EQ2e" target="_blank"
 									class="btn-view-project">Source</a>
 							</div>
 						</div>
@@ -952,20 +952,20 @@
 				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
 					<div class="single-portfolio">
 						<a href="#popup-12" class="has-popup">
-							<img src="images/The Bridge.jpg" class="Portfolio Image" alt="" />
+							<img src="images/Certificates/Data_Visualization.png" class="Portfolio Image" alt="" />
 							<div class="single-portfolio-overlay">
-								<h2>The Bridge</h2>
-								<h3>Mediation platform</h3>
+								<h2>Data Visualization</h2>
+								<h3>SimpliLearn</h3>
 							</div>
 						</a>
 					</div>
 					<div id="popup-12" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/Formation_DevOps.jpg" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/Data_Visualization.png" alt="Advanced JavaScript Certificate">
 							<div class="btn-layout">
-								<a href="./images/Certificates/Formation_DevOps.jpg" target="_blank"
+								<a href="./images/SimpliLearn Certifications/Data Visualization Cartificate For Oussema Mansouri.pdf" target="_blank"
 									class="btn-view-project">View PDF</a>
-								<a href="https://www.linkedin.com/company/yakin-process/" target="_blank"
+								<a href="https://simpli-web.app.link/e/ebQWs2KiHQb" target="_blank"
 									class="btn-view-project">Source</a>
 							</div>
 						</div>
@@ -977,20 +977,20 @@
 				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
 					<div class="single-portfolio">
 						<a href="#popup-13" class="has-popup">
-							<img src="images/Portfolio.jpg" class="Portfolio Image" alt="" />
+							<img src="images/Certificates/Data_Analytics.png" class="Portfolio Image" alt="" />
 							<div class="single-portfolio-overlay">
-								<h2>May portfolio</h2>
-								<h3>Portfolio</h3>
+								<h2>Data Analytics</h2>
+								<h3>SimpliLearn</h3>
 							</div>
 						</a>
 					</div>
 					<div id="popup-13" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/Formation_DevOps.jpg" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/Data_Analytics.png" alt="Advanced JavaScript Certificate">
 							<div class="btn-layout">
-								<a href="./images/Certificates/Formation_DevOps.jpg" target="_blank"
+								<a href="./images/SimpliLearn Certifications/Oussema Mansouri Data Analytics Certificate.pdf" target="_blank"
 									class="btn-view-project">View PDF</a>
-								<a href="https://www.linkedin.com/company/yakin-process/" target="_blank"
+								<a href="https://simpli-web.app.link/e/7zUywpHpSQb" target="_blank"
 									class="btn-view-project">Source</a>
 							</div>
 						</div>
@@ -1002,20 +1002,20 @@
 				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
 					<div class="single-portfolio">
 						<a href="#popup-14" class="has-popup">
-							<img src="images/homrani.jpg" class="Portfolio Image" alt="" />
+							<img src="images/Certificates/UI_Design.png" class="Portfolio Image" alt="" />
 							<div class="single-portfolio-overlay">
-								<h2>Homrani Sport</h2>
-								<h3>Gym website</h3>
+								<h2>UI Design</h2>
+								<h3>Scrimba/h3>
 							</div>
 						</a>
 					</div>
 					<div id="popup-14" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/Formation_DevOps.jpg" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/UI_Design.png" alt="Advanced JavaScript Certificate">
 							<div class="btn-layout">
-								<a href="./images/Certificates/Formation_DevOps.jpg" target="_blank"
+								<a href="./images/Scrimba Certifications/Learn UI Design Certificate For Oussema Mansouri.pdf" target="_blank"
 									class="btn-view-project">View PDF</a>
-								<a href="https://www.linkedin.com/company/yakin-process/" target="_blank"
+								<a href="https://scrimba.com/certificate-cert24zAwPPowMosiuEQYBvQa7CLxsriph8GdSqe1" target="_blank"
 									class="btn-view-project">Source</a>
 							</div>
 						</div>
