--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 <body data-spy="scroll" data-target="#main-navbar" data-offset="75">
 
 	<!-- Preloader starts -->
-	<div class="preloader">
+	<!-- <div class="preloader">
 		<div class="loader">
 			<div class="diamond"></div>
 			<div class="diamond"></div>
 			<div class="diamond"></div>
 		</div>
-	</div>
+	</div> -->
 	<!-- Preloader Ends -->
 
 	<!-- Header Section Start -->
@@ -64,6 +64,7 @@
 					<li class="nav-item"><a class="nav-link" href="#about">About</a></li>
 					<li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
 					<li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
+					<li class="nav-item"><a class="nav-link" href="#certification">Certification</a></li>
 					<li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
 					<li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
 				</ul>
@@ -181,7 +182,6 @@
 	<!-- Services Section Starts -->
 	<section class="services" id="services">
 		<div class="container">
-			<br><br>
 			<div class="row">
 				<div class="col-md-12">
 					<!-- Section title start -->
@@ -279,7 +279,6 @@
 	<!-- My Resume Section Starts -->
 	<section class="my-resume" id="resume">
 		<div class="container">
-			<br><br>
 			<div class="row">
 				<div class="col-md-12">
 					<!-- Section title start -->
@@ -637,7 +636,7 @@
 		</div>
 
 		<!-- Certificates Section Starts -->
-		<div class="container" style="margin-top: 2rem;">
+		<div class="container" style="margin-top: 2rem;" id="certification">
 			<div class="row">
 				<div class="col-md-12">
 					<!-- Section title start -->
@@ -1269,8 +1268,8 @@
 							<div class="btn-layout">
 								<a href="./images/SimpliLearn Certifications/Oussema Mansouri Python Pandas Certificate.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
-								<a href="https://simpli-web.app.link/e/nhT6WDwsSQb"
-									target="_blank" class="btn-view-project">Source</a>
+								<a href="https://simpli-web.app.link/e/nhT6WDwsSQb" target="_blank"
+									class="btn-view-project">Source</a>
 							</div>
 						</div>
 					</div>
@@ -1287,7 +1286,6 @@
 	<!-- Portfolio Section Starts -->
 	<section class="portfolio" id="portfolio">
 		<div class="container">
-			<br><br>
 			<div class="row">
 				<div class="col-md-12">
 					<!-- Section title start -->
@@ -1869,7 +1867,8 @@
 					<!-- Contact info single start -->
 					<div class="contact-info-single wow fadeInUp" data-wow-delay="0.6s">
 						<h3>Phone No.</h3>
-						<p>+216 98 650 478 <br>+216 98 650 478 </p>
+						<p>+216 98 650 478 </p>
+						<p> +216 98 650 478 </p>
 					</div>
 					<!-- Contact info single end -->
 				</div>
